--- a/.env_sample
+++ b/.env_sample
@@ -1,7 +1,7 @@
-EMAIL_USER='sample@outlook.com'
-EMAIL_PASSWORD='sample'
-# TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-# TWILIO_AUTH_TOKEN=your_twilio_auth_token
-# TWILIO_PHONE_NUMBER=+1234567890
+# EMAIL_USER=sample@outlook.com
+# EMAIL_PASSWORD=XXXXXXXX
 
-PORT=8000
+# PHONE_NUMBER_ID = phone_number_id
+# WHATSAPP_AUTH_TOKEN = access_token
+
+# PORT=4700
