refresh rotation true (will get new refresh+access token pair on refresh endpoint ; minor changes in .env and settings

--- a/.env_sample
+++ b/.env_sample
@@ -1,7 +1,12 @@
 # EMAIL_USER=sample@outlook.com
 # EMAIL_PASSWORD=XXXXXXXX
 
+# CONTACT_EMAIL_USER =  
+# CONTACT_EMAIL_PASSWORD = 
+
 # PHONE_NUMBER_ID = phone_number_id
 # WHATSAPP_AUTH_TOKEN = access_token
+
+# SECRET_KEY = 
 
 # PORT=4700
