added fast2sms otp, but disabled by default - can change in views

--- a/.env_sample
+++ b/.env_sample
@@ -4,6 +4,9 @@
 # PHONE_NUMBER_ID = phone_number_id
 # WHATSAPP_AUTH_TOKEN = access_token
 
+# FAST2SMS_AUTH_TOKEN = 
+# FAST2SMS_SENDER_ID = 
+
 # SECRET_KEY = 
 
 # PORT=4700
